--- a/Notebooks/Risk Adjusted Return.ipynb
+++ b/Notebooks/Risk Adjusted Return.ipynb
@@ -634,7 +634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Portfolio returns"
+    "### Quantile returns"
    ]
   },
   {
